# react-native-harmony-svg

./: .gitignore
tester/: App.tsx  (+6 more)
tester/harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
tester/harmony/svg/src/main/cpp/: Attribute.h  CMakeLists.txt  ComponentDescriptors.h  EventEmitters.cpp  EventEmitters.h  FontHolderBase.cpp  FontHolderBase.h  Props.cpp  Props.h  RNSVGCircleComponentDescriptor.h  RNSVGClipPathComponentDescriptor.h  RNSVGDefsComponentDescriptor.h  RNSVGGroupComponentDescriptor.h  RNSVGImageComponentDescriptor.h  RNSVGLinearGradientComponentDescriptor.h  RNSVGPathComponentDescriptor.h  RNSVGRectComponentDescriptor.h  RNSVGStopComponentDescriptor.h  RNSVGSvgViewComponentDescriptor.h  SVGComponentDescriptor.h  SVGGradient.cpp  SVGGradient.h  SVGPackage.cpp  SVGPackage.h  SVGProps.h  SVGShadowNode.h  ShadowNodes.cpp  ShadowNodes.h  States.h  SvgArkUINode.cpp  SvgArkUINode.h  SvgBaseAttribute.h  SvgCircle.cpp  SvgCircle.h  SvgClipPath.h  SvgContext.cpp  SvgContext.h  SvgDefs.h  SvgEllipse.cpp  SvgEllipse.h  (+42 more)
tester/harmony/svg/src/main/cpp/componentBinders/: RNSVGCircleJSIBinder.h  RNSVGClipPathJSIBinder.h  RNSVGDefsJSIBinder.h  RNSVGEllipseJSIBinder.h  RNSVGForeignObjectJSIBinder.h  RNSVGGroupJSIBinder.h  RNSVGImageJSIBinder.h  RNSVGLineJSIBinder.h  RNSVGLinearGradientJSIBinder.h  RNSVGMarkerJSIBinder.h  RNSVGMaskJSIBinder.h  RNSVGPathJSIBinder.h  RNSVGPatternJSIBinder.h  RNSVGRadialGradientJSIBinder.h  RNSVGRectJSIBinder.h  RNSVGSvgViewAndroidJSIBinder.h  RNSVGSvgViewJSIBinder.h  RNSVGSymbolJSIBinder.h  RNSVGTSpanJSIBinder.h  RNSVGTextJSIBinder.h  RNSVGTextPathJSIBinder.h  RNSVGUseJSIBinder.h
tester/harmony/svg/src/main/cpp/componentInstances/: RNSVGBaseCI.h  RNSVGBaseComponentInstance.h  RNSVGCircleComponentInstance.cpp  RNSVGCircleComponentInstance.h  RNSVGClipPathComponentInstance.cpp  RNSVGClipPathComponentInstance.h  RNSVGDefsComponentInstance.cpp  RNSVGDefsComponentInstance.h  RNSVGEllipseComponentInstance.cpp  RNSVGEllipseComponentInstance.h  RNSVGGroupComponentInstance.cpp  RNSVGGroupComponentInstance.h  RNSVGImageComponentInstance.cpp  RNSVGImageComponentInstance.h  RNSVGLineComponentInstance.cpp  RNSVGLineComponentInstance.h  RNSVGLinearGradientComponentInstance.cpp  RNSVGLinearGradientComponentInstance.h  RNSVGMarkerComponentInstance.cpp  RNSVGMarkerComponentInstance.h  RNSVGMaskComponentInstance.cpp  RNSVGMaskComponentInstance.h  RNSVGPathComponentInstance.cpp  RNSVGPathComponentInstance.h  RNSVGPatternComponentInstance.cpp  RNSVGPatternComponentInstance.h  RNSVGRadialGradientComponentInstance.cpp  (+15 more)
(+194 files in other folders)
